<resources>
    <string name="app_name">Registration app</string>
    <string name="welcome_to_our_application_enjoy">Welcome to our application,Enjoy!</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="get_registered">GET REGISTERED!</string>
    <string name="next" />
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="done">done</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">send email</string>
    <string name="otp_verfication">OTP Verfication</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_send_otp_on_your_number">we have send OTP on your number</string>
    <string name="resend_otp">Resend OTP ?</string>
    <string name="verify">verify</string>
    <string name="enter_your_mobile_no">Enter your Mobile no</string>
    <string name="we_will_send_you_a_otp_code">we will send you a OTP code</string>
    <string name="_91">+91</string>
    <string name="send_otp">send otp</string>
    <string name="Sign_in">Sign in</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="your_details">Your Details</string>
    <string name="mobile_no">Mobile no</string>
    <string name="sign_out">sign out</string>

    <string-array name="branch">
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
        <item>CE</item>
        <item>ME</item>
    </string-array>

    <string-array name="year">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
</resources>