<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupdetails">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login1"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:background="@drawable/transparblackbg"
        android:layout_margin="10dp">

    <TextView
        android:id="@+id/Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/orangebrown"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="30dp"/>


        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/Details"/>

        <EditText
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:maxLines="1" />

        <TextView
            android:id="@+id/branchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/signupName"/>

        <Spinner
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/branchText"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/branch"/>

        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/yearText"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:id="@+id/GenderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/year"/>

        <RadioGroup
            android:id="@+id/genderRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/GenderText"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingEnd="20dp"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingEnd="20dp" />
            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderRadio"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/orangebrown"
            android:padding="15dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>