<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/bg"
       android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/uppertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/get_registered"
        android:textColor="@color/white"
        android:textSize="43sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_application_enjoy"
        android:textColor="#F9BEA1"
        android:textSize="19sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/uppertext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signin"
        android:backgroundTint="#E35F3B"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
       android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>