<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mobilenumber">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login1"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:background="@drawable/transparblackbg"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/signuptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/orangebrown"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="30dp"/>

        <ImageView
            android:id="@+id/mobileotp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/mobileotpsend"
            android:layout_marginTop="30dp"
            android:layout_below="@id/signuptext" />

        <TextView
            android:id="@+id/uppertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_no"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_below="@id/mobileotp"/>

        <TextView
            android:id="@+id/lowertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_a_otp_code"
            android:textColor="@color/orangebrown"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@id/uppertext"/>

        <EditText
            android:id="@+id/mobilenocontrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_91"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_below="@id/lowertext"
            android:enabled="false"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/mobileno"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_toEndOf="@id/mobilenocontrycode"
            android:layout_below="@id/lowertext"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/sendotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileno"
            android:layout_marginTop="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/orangebrown"
            android:padding="15dp"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileno"
            android:layout_marginTop="131dp"
            android:indeterminateTint="@color/orangebrown"
            android:visibility="invisible"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>