<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landingpage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login1"
        android:scaleType="centerCrop"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/transparblackbg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/male"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_details"
            android:textColor="@color/orangebrown"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="30dp"
            android:layout_below="@id/male"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/Details"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/branchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/Name"/>

        <TextView
            android:id="@+id/branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_storage_24"
            android:drawablePadding="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/branchText"/>

        <TextView
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/branch"/>

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_menu_book_24"
            android:drawablePadding="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/yearText"/>

        <TextView
            android:id="@+id/GenderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/year"/>

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_male_24"
            android:drawablePadding="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/GenderText"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/Gender"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/emailText"/>

        <TextView
            android:id="@+id/mobileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/email"/>

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_mobile_friendly_24"
            android:drawablePadding="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/mobileText" />

        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#E35F3B"
            android:padding="15dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>